Basic interface showing updating rankings table with add match button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <div class ='container' id ='top'>
       <div class='jumbotron'>
 
+        <h3>Current Rankings</h3>
+
+        <table id='rankings'class="table table-condensed">
+        <th> Team </th>
+        <th> Points </th>
+        </table>
+
+        <button type="button" class="btn btn-success" id="match">Add a Match</button>
       </div>
     </div>
     <script src='src/Pulseball.js'></script>
